# portapack-mayhem

./: .gitmodules  CMakeLists.txt
firmware/: CMakeLists.txt
firmware-disarmed/: CMakeLists.txt
firmware-disarmed/application/: CMakeLists.txt  main.cpp  ui_lua_app_view.cpp  ui_lua_app_view.hpp  ui_lua_system_view.cpp  ui_lua_system_view.hpp  ui_lua_view.cpp  ui_lua_view.hpp
firmware-disarmed/application/lua_binding/: function_helper.hpp  lua_binding.hpp  lua_state.cpp  lua_state.hpp  lua_wrapper.hpp  state.cpp  state.hpp
firmware-disarmed/application/lua_binding/hw/: firmware.cpp  firmware.hpp
firmware-disarmed/application/lua_binding/ui/: button.cpp  button.hpp  label.cpp  label.hpp  textfield.hpp
firmware-disarmed/application/tiny_memory_elua/: lauxlib.c  lauxlib.h  linit.c  lstrlib.c  lua.h  luaconf.h
firmware-disarmed/baseband/: CMakeLists.txt
firmware/application/: CMakeLists.txt  debug.cpp  event_m0.cpp  lua_binding.cpp  lua_binding.hpp  main.cpp  portapack.cpp  portapack.hpp  ui_external_items_menu_loader.cpp  ui_external_items_menu_loader.hpp  ui_navigation.cpp  ui_navigation.hpp  usb_serial_shell.cpp
firmware/application/apps/: ui_flash_utility.cpp  ui_flash_utility.hpp  ui_lua.cpp  ui_lua.hpp  ui_sd_example.cpp  ui_sd_example.hpp  ui_sigview.cpp  ui_sigview.hpp
firmware/application/hw/: w25q80bv.cpp  w25q80bv.hpp
firmware/application/lua/: lauxlib.c  llex.c  lstate.c  lstring.c  luaconf.h
firmware/application/ui/: ui_btngrid.hpp
firmware/application_sd/: CMakeLists.txt  app.cpp  entry.c  main.c  main.cpp  ui_sd_example.cpp  ui_sd_example.hpp
firmware/baseband/: CMakeLists.txt  dsp_filter.cpp  dsp_filter.hpp  dsp_window.cpp  dsp_window.hpp  halconf.h  mcuconf.h  proc_flash_utility.cpp  proc_sigview.cpp  proc_sigview.hpp  proc_wfm_audio.cpp  w25q80bv.cpp  w25q80bv.hpp
firmware/baseband/sd_over_usb/: usb_descriptor.c
firmware/chibios-portapack/boards/PORTAPACK_BASEBAND/: board.c
firmware/chibios-portapack/os/ports/GCC/ARMCMx/LPC43xx_M0/: vectors.c
firmware/chibios-portapack/os/ports/GCC/ARMCMx/LPC43xx_M0/ld/: LPC43xx_M0.ld  LPC43xx_M0_ram.ld
firmware/common/: chibios_cpp.cpp  cpld_max5.cpp  cpld_update.cpp  cpld_xilinx.cpp  cpld_xilinx.hpp  debug.cpp  external_apps.h  hackrf_gpio.hpp  jtag.hpp  jtag_target_gpio.hpp  pins.hpp  spi_image.hpp  ui_widget.cpp
firmware/standalone/pacman/: main.cpp
firmware/tools/: make_ext_app_linker_imports.py
sdcard/APPS/: main.lua
sdcard/APPS/radio/: app.lua  radio.lua
